changing title and h1

--- a/index.html
+++ b/index.html
@@ -4,10 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Super Crazy Title</title>
 </head>
 <body>
-    <title>Super Cool Title</title>
+    <h1>Thats crazy good luch tho</h1>>
+    
     
 </body>
 </html>
